{
    "name": "CustomInputActions",
    "maps": [
        {
            "name": "PlayerActions",
            "id": "5e83f50d-ba6e-4dc1-a1a2-c86455784de1",
            "actions": [
                {
                    "name": "MoveDirection",
                    "type": "Value",
                    "id": "b355359e-3ee1-45e9-a826-66c83388c7f5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalAction",
                    "type": "Button",
                    "id": "8fd132bd-ed36-4b1f-80c3-c9a7dceb54df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedAction",
                    "type": "Button",
                    "id": "9e002070-7928-42dd-a6a1-f70e35746461",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraLook",
                    "type": "Value",
                    "id": "e5d67788-fd8d-4a3f-92a8-336696ee5243",
                    "expectedControlType": "Vector2",
                    "processors": "ScaleVector2(y=-1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftPropulsion",
                    "type": "Value",
                    "id": "2b7baf43-6e6a-4de1-8501-11d042bb2fb4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightPropulsion",
                    "type": "Value",
                    "id": "9901e1db-c664-4281-b91b-8dcb043ca2ed",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "MoveAxis",
                    "id": "bfc0d9d5-5ffe-4890-837e-40ffb7922b2c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fe17319b-1c02-4bb3-80b6-77db02d451a7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "36c9bddb-dc23-44bf-8430-eed467378850",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e1e2500c-b6b6-4406-913f-8b37e7fb4a32",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "de371e04-2a7c-429c-a8cb-2f0c11b0f182",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a920fa72-d85d-4f7e-ae07-d348648d3250",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.2)",
                    "groups": "Gamepad",
                    "action": "MoveDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5631178b-91e5-4c0a-a1f9-d0e407d87cb4",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap(duration=0.1)",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "VerticalAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a639f5d5-1166-48f9-bbb6-d939d11ded7d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Tap(duration=0.1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "VerticalAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92f0bd53-e01c-4d4e-a163-0e8fc489a751",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "SpeedAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76f81138-9880-4a76-98ee-695bb7c73d62",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SpeedAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3af5d24-9d4e-4bee-86c7-fbba516e50b8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(y=-1),StickDeadzone(min=0.2)",
                    "groups": "Mouse&Keyboard",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bc6381d-1ad6-4dd2-8bd7-5d044e51810e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.8,y=0.8),StickDeadzone(min=0.09)",
                    "groups": "Gamepad",
                    "action": "CameraLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9618dac8-867a-4644-bfd8-da171f19f7b1",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftPropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95e998a9-6e5f-44ac-93e4-8ef49e1cf1af",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "LeftPropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b28cc281-dfc5-465c-91ab-bb9762821384",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RightPropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "565311e3-70d0-4750-b2a1-eab42f5968da",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "RightPropulsion",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameControllerActions",
            "id": "47375ca4-a452-4715-b85a-77a8241497d2",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "c6e060d4-dd04-4bb4-9a67-3088348e8155",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Navigation",
                    "type": "Value",
                    "id": "6a75da69-63a6-4257-9b05-212161477eb5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a96c8dd3-fefc-42d4-a837-b30e5e39c5d1",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eddbd042-f396-4ea6-9f84-0727585ec4dd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse&Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed10c711-bd8e-4fb2-8bf6-679cebc7016e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87451039-64dc-4630-aef1-f68d857286c2",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Navigation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DriverActions",
            "id": "d2c0972f-4298-46f6-b765-fa361d98b8cb",
            "actions": [
                {
                    "name": "Accelerator",
                    "type": "Value",
                    "id": "f40f9e27-1cd2-40c2-a23b-aab69b53bab3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Steer",
                    "type": "Value",
                    "id": "7ed4bb8a-5e30-4491-8e25-aff5fbf9eceb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "Value",
                    "id": "9f3f5850-92d3-4d5a-a2cc-c8f86553ef32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f49bbbf-4432-4ae1-b60d-c596852d9a39",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Accelerator",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d99a907-87c1-4871-9d44-e5c14b68a28b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7704b82d-c10f-4b88-a5b2-444bec915118",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse&Keyboard",
            "bindingGroup": "Mouse&Keyboard",
            "devices": []
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": []
        }
    ]
}